force-app/main/default/objects/Apttus_Billing__CreditMemoLineItem__c/Apttus_Billing__CreditMemoLineItem__c.object-meta.xml
<CustomObject>
    <label>Credit Memo Line Item</label>
    <nameField>
        <displayFormat>CMI-{00000000}</displayFormat>
        <label>Line Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Memo Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>