force-app/main/default/objects/Apttus_Billing__CreditMemoLineItem__c/fields/Apttus_Billing__Amount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Amount__c</fullName>
    <description>Amount of each of the Credit Memo Line Item derived from the Credit Memo.</description>
    <inlineHelpText>Amount of the Credit Memo Line Item.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>