force-app/main/default/objects/Apttus_Billing__CreditMemoLineItem__c/fields/Apttus_Billing__AppliedInvoiceLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AppliedInvoiceLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be set when a Wallet is applied to an Invoice Line Item during the Invoice Run.</description>
    <label>Applied Invoice Line Item</label>
    <referenceTo>Apttus_Billing__InvoiceLineItem__c</referenceTo>
    <relationshipLabel>Credit Memo Line Items (Applied Invoice Line Item)</relationshipLabel>
    <relationshipName>WalletCreditMemoLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>