force-app/main/default/objects/Apttus_Billing__CreditMemoLineItem__c/fields/Apttus_Billing__BillingCity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingCity__c</fullName>
    <description>City mentioned in the Billing Address.</description>
    <inlineHelpText>City mentioned in the Billing Address.</inlineHelpText>
    <label>Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>