force-app/main/default/objects/Apttus_Billing__CreditMemoLineItem__c/fields/Apttus_Billing__BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingPostalCode__c</fullName>
    <description>Zip or Postal code in the Billing Address.</description>
    <inlineHelpText>Zip or Postal code in the Billing Address.</inlineHelpText>
    <label>Billing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>