force-app/main/default/objects/Apttus_Billing__CreditMemoLineItem__c/fields/Apttus_Billing__BillingScheduleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingScheduleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Corresponding Billing Schedule.</description>
    <inlineHelpText>Corresponding Billing Schedule.</inlineHelpText>
    <label>Billing Schedule</label>
    <referenceTo>Apttus_Billing__BillingSchedule__c</referenceTo>
    <relationshipLabel>Credit Memo Line Items</relationshipLabel>
    <relationshipName>CreditMemoLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>