force-app/main/default/objects/Apttus_Billing__CreditMemoLineItem__c/fields/Apttus_Billing__BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingStreet__c</fullName>
    <description>Street mentioned in the Billing Address.</description>
    <inlineHelpText>Street mentioned in the Billing Address.</inlineHelpText>
    <label>Billing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>