force-app/main/default/objects/Apttus_Billing__CreditMemoLineItem__c/fields/Apttus_Billing__BillToAccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillToAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Bill To address on the associated Account.</description>
    <inlineHelpText>Bill To address on the associated Account.</inlineHelpText>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Memo Line Items</relationshipLabel>
    <relationshipName>CreditMemoLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>