force-app/main/default/objects/Apttus_Billing__CreditMemoLineItem__c/fields/Apttus_Billing__CreditMemoId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CreditMemoId__c</fullName>
    <description>Parent Credit Memo ID.</description>
    <inlineHelpText>Parent Credit Memo ID.</inlineHelpText>
    <label>Credit Memo</label>
    <referenceTo>Apttus_Billing__CreditMemo__c</referenceTo>
    <relationshipLabel>Credit Memo Line Items</relationshipLabel>
    <relationshipName>CreditMemoLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>