force-app/main/default/objects/Apttus_Billing__CreditMemoLineItem__c/fields/Apttus_Billing__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Description__c</fullName>
    <description>Description of the Credit Memo Line Item.</description>
    <inlineHelpText>Description of the Credit Memo Line Item.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>