force-app/main/default/objects/Apttus_Billing__CreditMemoLineItem__c/fields/Apttus_Billing__EndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__EndDate__c</fullName>
    <description>The last day the Credit Memo Line Item is in effect.</description>
    <inlineHelpText>The last day the Credit Memo Line Item is in effect.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>