force-app/main/default/objects/Apttus_Billing__CreditMemoLineItem__c/fields/Apttus_Billing__InvoiceLineItemId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__InvoiceLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Corresponding Invoice Line object</description>
    <inlineHelpText>Corresponding Invoice Line object</inlineHelpText>
    <label>Invoice Line Item</label>
    <referenceTo>Apttus_Billing__InvoiceLineItem__c</referenceTo>
    <relationshipLabel>Credit Memo Line Items</relationshipLabel>
    <relationshipName>CreditMemoLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>