force-app/main/default/objects/Apttus_Billing__CreditMemoLineItem__c/fields/Apttus_Billing__Quantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Quantity__c</fullName>
    <description>Number of units of the product listed in the Credit Memo.</description>
    <inlineHelpText>Number of units of the product.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>