force-app/main/default/objects/Apttus_Billing__CreditMemoLineItem__c/fields/Apttus_Billing__StartDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__StartDate__c</fullName>
    <description>The day from which the Credit Memo Line Item is in effect.</description>
    <inlineHelpText>The day from which the Credit Memo Line Item is in effect.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>