force-app/main/default/objects/Apttus_Billing__CreditMemoLineItem__c/fields/Apttus_Billing__Taxable__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the product is taxable.</description>
    <inlineHelpText>Indicates whether the product is taxable.</inlineHelpText>
    <label>Taxable ?</label>
    <type>Checkbox</type>
</CustomField>