force-app/main/default/objects/Apttus_Billing__CreditMemoLineItem__c/fields/Apttus_Billing__TaxCodeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TaxCodeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the Tax Code associated with the product or service. Only applicable for taxable items.</description>
    <inlineHelpText>ID of the Tax Code associated with the product or service. Only applicable for taxable items.</inlineHelpText>
    <label>Tax Code</label>
    <referenceTo>Apttus_Config2__TaxCode__c</referenceTo>
    <relationshipLabel>Credit Memo Line Items</relationshipLabel>
    <relationshipName>CreditMemoLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>