force-app/main/default/objects/Apttus_Billing__CreditMemoLineItem__c/fields/Apttus_Billing__WalletId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__WalletId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be set when a Wallet is applied to an Invoice Line Item during the Invoice Run.</description>
    <inlineHelpText>This field will be set when a Wallet is applied to an Invoice Line Item during the Invoice Run.</inlineHelpText>
    <label>Wallet Id</label>
    <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
    <relationshipLabel>Credit Memo Line Items (Wallet)</relationshipLabel>
    <relationshipName>WalletCreditMemoLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>